--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,7 +1,7 @@
 name: Build and Test PR
 on:
   pull_request:
-    branches: ["dev"]
+    branches: ["main"]
 jobs:
   version:
     uses: ./.github/workflows/version.yml
