--- a/PTrampert.Optionals/PTrampert.Optionals.csproj
+++ b/PTrampert.Optionals/PTrampert.Optionals.csproj
@@ -16,6 +16,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" />
+      <PackageReference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" Version="4.1.0" />
+      <PackageReference Include="System.CodeDom" Version="9.0.8" />
       <PackageReference Include="System.Text.Json" Version="9.0.8" />
     </ItemGroup>
 
