Directory path instead of csproj

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,7 @@ version: 2
 updates:
   - package-ecosystem: "nuget" # See documentation for possible values
     directories:
-    - /*/*.csproj # Location of package manifests
+    - /PTrampert.Optionals*/ # Location of package manifests
     schedule:
       interval: "weekly"
     groups:
