--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,8 @@
 version: 2
 updates:
   - package-ecosystem: "nuget" # See documentation for possible values
-    directory: "/" # Location of package manifests
+    directories:
+    - /PTrampert.Optionals*/ # Location of package manifests
     schedule:
       interval: "weekly"
     groups:
