Fix dependabot PR titles

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,3 +14,6 @@ updates:
       csharp-deps:
         patterns:
           - "*"
+    commit-message:
+      prefix: "(PATCH)"
+      include: "scope"
